Added easy switching between IU and TACC APIs

--- a/jetstream.env.sample
+++ b/jetstream.env.sample
@@ -3,5 +3,13 @@ OS_USER_DOMAIN_NAME=tacc
 OS_PROJECT_NAME={project-name}
 OS_USERNAME={username}
 OS_PASSWORD={password}
-OS_AUTH_URL={auth-url}
 OS_IDENTITY_API_VERSION=3
+
+# IU API
+OS_AUTH_URL_IU={auth-url}
+
+# TACC API
+OS_AUTH_URL_TACC={auth-url}
+
+# default API
+OS_AUTH_URL=$OS_AUTH_URL_IU
