Oops. Now switching between IU and TACC APIs is easy.

--- a/jetstream.env.sample
+++ b/jetstream.env.sample
@@ -11,5 +11,5 @@ OS_AUTH_URL_IU={auth-url}
 # TACC API
 OS_AUTH_URL_TACC={auth-url}
 
-# default API
-OS_AUTH_URL=$OS_AUTH_URL_IU
+# default API (point to API to use by default)
+OS_AUTH_URL={default-auth-url}
