--- a/jetstream.env.sample
+++ b/jetstream.env.sample
@@ -1,8 +1,12 @@
 OS_PROJECT_DOMAIN_NAME=tacc
 OS_USER_DOMAIN_NAME=tacc
 OS_PROJECT_NAME={project-name}
+OS_PROJECT_ID={project-id}
+OS_PROJECT_DOMAIN_ID={project-domain-id}
 OS_USERNAME={username}
 OS_PASSWORD={password}
+OS_REGION_NAME=RegionOne
+OS_INTERFACE=public
 OS_IDENTITY_API_VERSION=3
 
 # IU API
