--- a/jetstream.env.sample
+++ b/jetstream.env.sample
@@ -1,8 +1,6 @@
 OS_PROJECT_DOMAIN_NAME=tacc
 OS_USER_DOMAIN_NAME=tacc
 OS_PROJECT_NAME={project-name}
-OS_PROJECT_ID={project-id}
-OS_PROJECT_DOMAIN_ID={project-domain-id}
 OS_USERNAME={username}
 OS_PASSWORD={password}
 OS_REGION_NAME=RegionOne
@@ -11,9 +9,15 @@ OS_IDENTITY_API_VERSION=3
 
 # IU API
 OS_AUTH_URL_IU={auth-url}
+OS_PROJECT_ID_IU={project-id}
+OS_PROJECT_DOMAIN_ID_IU={project-domain-id}
 
 # TACC API
 OS_AUTH_URL_TACC={auth-url}
+OS_PROJECT_ID_TACC={project-id}
+OS_PROJECT_DOMAIN_ID_TACC={project-domain-id}
 
 # default API (point to API to use by default)
 OS_AUTH_URL={default-auth-url}
+OS_PROJECT_ID={default-project-id}
+OS_PROJECT_DOMAIN_ID={default-project-domain-id}
