--- a/jetstream.env.sample
+++ b/jetstream.env.sample
@@ -1,34 +1,7 @@
-#-----------------------------------------------
-# Copy this file to jetstream.env and enter 
-# settings below according to README
-#-----------------------------------------------
-
-# Your project name
-OS_PROJECT_NAME=???
-
-# Your TACC credentials (to https://portal.tacc.utexas.edu/)
-OS_USERNAME=???
-OS_PASSWORD=???
-
-# IU API settings
-OS_AUTH_URL_IU=???
-OS_PROJECT_ID_IU=???
-OS_PROJECT_DOMAIN_ID_IU=???
-
-# TACC API settings
-OS_AUTH_URL_TACC=???
-OS_PROJECT_ID_TACC=???
-OS_PROJECT_DOMAIN_ID_TACC=???
-
-#-----------------------------------------------
-# You don't need to worry about the following
-#-----------------------------------------------
-
-# Default API (can be IU or TACC)
-OS_DEFAULT_API=IU
-
-# Other settings
-OS_USER_DOMAIN_NAME=tacc
-OS_REGION_NAME=RegionOne
-OS_INTERFACE=public
+OS_AUTH_TYPE=v3applicationcredential
+OS_AUTH_URL=???
 OS_IDENTITY_API_VERSION=3
+OS_REGION_NAME="IU"
+OS_INTERFACE=public
+OS_APPLICATION_CREDENTIAL_ID=???
+OS_APPLICATION_CREDENTIAL_SECRET=??
